修改debug日志设置；添加spj编译接口；添加elo积分算法